test/data/syntax-errors/missing-end.gs
whiles (bless) 
	givesUs 1
GollumGollum